# vinted-bot

./: README.md  pyproject.toml
.github/workflows/: python-app.yml  python-package.yml
src/vinted_bot/: __init__.py  loop.py  main.py
src/vinted_bot/models/: __init__.py  buffer_item.py  channels_bot.py  searches.py
